# EinkPaper

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
main/: CMakeLists.txt  git_version.cmake  idf_component.yml  lvgl_list_demo.cpp  lvgl_list_demo.h  main.cpp  themes.h  ui_demo.cpp  version.h.in
main/assets/: assets.h  config.html  crashlog.html  index.html  upload.html
main/config/: DeviceConfig.h  DeviceConfigManager.cpp  DeviceConfigManager.h
main/crash_report/: CrashReport.cpp  CrashReport.h
main/file_manager/: README.md  file_manager.cpp  file_manager.h  sd_card_helper.h
main/gestures/: TouchGestureDetector.cpp  TouchGestureDetector.h
main/hal/sdcard/: README.md  sdcard.cpp  sdcard.h
main/hal/wifi/: WifiManager.cpp  WifiManager.h
main/http/server/: HttpServer.cpp  HttpServer.h
main/http/service/: AbstractHttpReqHandler.cpp  AbstractHttpReqHandler.h  HttpDeviceConfigHandler.h
main/http/service/config/: ApiConfigHandler.cpp  ApiConfigHandler.h  ConfigHandler.cpp  ConfigHandler.h
main/http/service/crashlog/: CrashLogApiAllHandler.cpp  CrashLogApiAllHandler.h  CrashLogApiOneHandler.cpp  CrashLogApiOneHandler.h  CrashLogHandler.cpp  CrashLogHandler.h
main/http/service/upload/: UploadHandler.cpp  UploadHandler.h
main/page_manager/: Page.cpp  Page.h  PageManager.cpp  PageManager.h  PageType.h
main/pages/file_browser/: FileBrowserPage.cpp  FileBrowserPage.h  PagedFileBrowserPage.cpp  PagedFileBrowserPage.h  README.md  file_browser.cpp  file_browser.h  paged_file_browser.cpp  paged_file_browser.h
main/pages/httpserver/: HttpServerPage.cpp  HttpServerPage.h
main/pages/launcher/: LauncherPage.cpp  LauncherPage.h
main/pages/message/: MessagePage.cpp  MessagePage.h  MessagePageHelper.h  README.md
main/pages/settings/: SettingsPage.cpp  SettingsPage.h
main/refresh_counter/: RefreshCounter.cpp  RefreshCounter.h
main/ui_kit/: Button.cpp  Button.h  Dialog.cpp  Dialog.h  FrameLayout.cpp  FrameLayout.h  LinearLayout.cpp  LinearLayout.h  ListView.cpp  ListView.h  PagedListView.cpp  PagedListView.h  QRCodeView.cpp  QRCodeView.h  TextView.cpp  TextView.h  UIKIT.h  View.cpp  View.h  ViewGroup.cpp  ViewGroup.h
tools/: fonts_converter.sh  ttf2vlw.sh
